objects/Student__c.object
<CustomObject>
    <label>Student</label>
    <nameField>
        <label>student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>HOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOD</label>
        <referenceTo>HOD__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <label>age</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>t_f__c</fullName>
        <formula>fee_1__c + fee_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>I need it to be perfect</inlineHelpText>
        <label>t f</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Fourth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sport</label>
        <referenceTo>Sport__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fee_1__c</fullName>
        <label>fee 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fee_2__c</fullName>
        <label>fee 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ROLL_NO__c</fullName>
        <label>ROLL NO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_type__c</fullName>
        <label>Batch type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Allout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>EEE</fullName>
                </value>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>MECH</fullName>
                </value>
                <value>
                    <fullName>CIVIL</fullName>
                </value>
                <value>
                    <fullName>BIO-TECH</fullName>
                </value>
                <value>
                    <fullName>AERO</fullName>
                </value>
                <value>
                    <fullName>AUTO-MOBILE</fullName>
                </value>
                <value>
                    <fullName>CHEMICAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <label>Scholarship</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>personal_gmail_id__c</fullName>
        <label>personal gmail id</label>
        <type>Email</type>
    </fields>
    <recordTypes>
        <fullName>Record_1</fullName>
        <active>true</active>
        <label>Record 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_2</fullName>
        <active>true</active>
        <label>Record 2</label>
    </recordTypes>
</CustomObject>